fix scroll hidden under nav

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -14,6 +14,7 @@ body {
 h1,
 h2 {
 	margin-bottom: 1.5rem;
+	scroll-margin-top: 56px;
 }
 
 .small {
